k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medicos-backend-service
  namespace: default
  labels:
    app: medicos-backend
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: medicos-backend
